--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -33,12 +33,12 @@
 									</a>
 								</li>
 							</ul>
-							<div class="med-ic">
-								<div class="por">
-									<div class="tootip-5">설정/공유</div>
-									<img src="/resources/img/mypage/icon-8.png" class="med-me">
-								</div>
-							</div>
+<!-- 							<div class="med-ic"> -->
+<!-- 								<div class="por"> -->
+<!-- 									<div class="tootip-5">설정/공유</div> -->
+<!-- 									<img src="/resources/img/mypage/icon-8.png" class="med-me"> -->
+<!-- 								</div> -->
+<!-- 							</div> -->
 						</div>
 						
 						<script>
@@ -57,8 +57,8 @@
 						
 					</div>
 					
-					<div class="text-center mg_t50">
-							<button type="button" class="btn-more"><span>more</span></button>
+						<div class="text-center mg_t50" style="width:100px;">
+<!-- 							<button type="button" class="btn-more"><span>more</span></button> -->
 						</div>
 				</div>
 				
