--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -130,8 +130,8 @@ function myWorkList(){
 		}
 		if(result[i].dealTypCd == null){
 			myWorkListHtml += '<div class="item-div-img reg" style="height:320px;" >';
-			myWorkListHtml += '	<img src="'+ result[i].workMainImgUrl +'" style="width:320px;">';
-			myWorkListHtml += '	<div class="item-ho3 reg-div" style="width:320px;">';
+			myWorkListHtml += '	<img src="'+ result[i].workMainImgUrl +'" style="height:320px;">';
+			myWorkListHtml += '	<div class="item-ho3 reg-div">';
 			myWorkListHtml += '		<div class="regs" >';
 			myWorkListHtml += '			<a href="#" class="reg-a" workSq="'+ result[i].workSq +'"><span>거래 등록</span></a>';
 			myWorkListHtml += '			<a href="#" class="cor-a" workSq="'+ result[i].workSq +'"><span>작품 수정</span></a>';
