--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -186,10 +186,10 @@
 				<div class="login-box">
 					<p class="lb-p1">LOGIN</p>
 					<div class="input-box">
-						<input type="text" class="input-3" placeholder="아이디/이메일" id="txt_Id" value="swordbass.j10@gmail.com"/>
+						<input type="text" class="input-3" placeholder="아이디/이메일" id="txt_Id" value="daminat@mansion9.co.kr"/>
 					</div>
 					<div class="input-box">
-						<input type="password" class="input-3" placeholder="비밀번호" onkeydown="javascript: if (event.keyCode == 13) {login();}"id="txt_Pw" value="@install1684"/>
+						<input type="password" class="input-3" placeholder="비밀번호" onkeydown="javascript: if (event.keyCode == 13) {login();}"id="txt_Pw" value="!artword78354"/>
 					</div>
 					<div class="radio-3 rad-mg">
 						<input type="checkbox" id="a1" name="autoLoginYn" value="Y"/>
