--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -424,31 +424,13 @@ setInterval(function() {
 
 function btn_purchaseOrBid_onclick(){
 	if($("#btn_purchaseOrBid").text() == "구매하기"){
-		
-		var data = {
-				paymethod : "CARD", //지불수단
-				amount : parseInt(result.deal.dealStrtPrc.replaceAll(/,/g, '')), //결제금액
-				mbrRefNo : result.deal.mbrRefNo, //주문번호
-				goodsName : result.deal.workNm, //상품명
-				mbrSq : sMbrSqVal, //회원 순번
-				dealSq : result.deal.dealSq, //거래 순번
-				paymntTypCd : "1" //결제 유형 코드
-				}
-		$.ajax({
-			type: "POST",
-			contentType: 'application/json',
-	           url: "/payment/readyApi",
-	           dataType: 'json',
-	           data: JSON.stringify(data),
-	           async: false,
-			success:function(response){
-				console.log(response);
-				if (response.resultCode == '200') {
-					/* 결제창 호출 */
-					Mainpay.open(response.data.nextPcUrl); //*주의* PC와 Mobile은 URL이 상이합니다.
-					return false;
-				}
-			}
+		pageGoPost({
+			url:"/paymentBuyer",
+			target:"_self",
+			vals:[
+				["dealSq", result.deal.dealSq],
+				["mbrSq", sMbrSqVal]
+			]
 		});
 	}
 }
