--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -817,7 +817,7 @@ function dealSearch(){
 	     				dealListHtml += '			</p>';
 	     			}
 	     			if(dealList[i].dealTypCd == "S"){
-	     				dealListHtml += '			<h4>판매가 '+ formatComma(dealList[i].maxBidPrc) +'</h4>';
+	     				//dealListHtml += '			<h4>판매가 '+ formatComma(dealList[i].maxBidPrc) +'</h4>';
 	     			}
 	     			dealListHtml += '		</div>';
 	     			if(dealList[i].authSq == 2){
