--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -45,8 +45,8 @@
 							</ul>
 							<div class="med-ic">
 								<div class="por">
-									<div class="tootip-5">설정/공유</div>
-									<img src="resources/img/mypage/icon-8.png" class="med-me">
+<!-- 									<div class="tootip-5">설정/공유</div> -->
+<!-- 									<img src="resources/img/mypage/icon-8.png" class="med-me"> -->
 								</div>
 							</div>
 						</div>
