--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -76,9 +76,12 @@
 						<ul>
 							<li><a href="/memberEdit"><img src="resources/img/ic-1.jpg" /><span>마이 페이지</span></a></li>
 							<li><a href="/myDeal"><img src="resources/img/ic-2.jpg" /><span>경매 / 거래 내역</span></a></li>
-							<li class="myCollection"><a href="#"><img src="resources/img/ic-3.jpg" /><span>마이 콜렉션</span></a></li>
-							<li class="scrap"><a href="#"><img src="resources/img/ic-4.jpg" /><span>좋아요</span></a></li>
-							<li><a href="/customerService"><img src="resources/img/ic-5.jpg" /><span>고객센터</span></a></li>
+							<!-- class="myCollection" -->
+							<li><a href="javascript:fnModalAlert();"><img src="resources/img/ic-3.jpg" /><span>마이 콜렉션</span></a></li>
+							<!-- class="scrap" -->
+							<li><a href="javascript:fnModalAlert();"><img src="resources/img/ic-4.jpg" /><span>좋아요</span></a></li>
+							<!-- /customerService -->
+							<li><a href="javascript:fnModalAlert();"><img src="resources/img/ic-5.jpg" /><span>고객센터</span></a></li>
 						</ul>
 						<button type="button" class="btn-1" onclick="logout()">로그아웃</button>
 					</div>
