--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -20,7 +20,7 @@
 					
 					<div class="con-right">
 					
-						<div class="reds-box mg_t150 por" style="display:none">
+						<div class="reds-box mg_t150 por" style="display:">
 							<ul class="pc-on">
 								<li>
 									<a href="#" class="up-on">
